# coproduct-a2a-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/coproduct_a2a/: __init__.py  client.py  constants.py  crewai.py  jcs.py  langgraph.py  verify.py
tests/: test_adapters.py  test_bearer_token.py  test_jcs.py  test_verify.py
